Redimensionamento da aplicação e add favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" type="image/x-icon" href="./image/fem.ico">
 
 <body>
     <main>
